no way to remove object from master collection in 3d view #62313

Closed
opened 2019-03-07 14:54:23 +01:00 by MACHIN3 · 8 comments

System Information
Operating system: Ubuntu 17.10
Graphics card: Nvidia GTX 1050

Blender Version
Broken: a070815d12

Short description of error
In the 3d view, you can easily add an object to the master collection, but there doesn't seem to be a way to remove it, unless you unlink it in the outliner.
In addtion, the "Remove from active Collection" menu, does not recognize an active scene collection.

Exact steps for others to reproduce the error

  • Link to Collection allows adding objects to master collection 01.png
  • Remove from Collection does not support removing objects from master collection 02.png (object is in master collection and in 'Collection')
  • Neither doesRemove Selected from Active Collection 03.png (object is in master collection and in 'Collection' and master collection is active in outliner)
  • See https://www.youtube.com/watch?v=QOxewJys2sU

For consistencys sake, I'd suggest to add a "Scene Collection" entry to the "Remove from Collection" menu, just like there is one in the "Link to Collection" menu

**System Information** Operating system: Ubuntu 17.10 Graphics card: Nvidia GTX 1050 **Blender Version** Broken: a070815d12 **Short description of error** In the 3d view, you can easily add an object to the master collection, but there doesn't seem to be a way to remove it, unless you unlink it in the outliner. In addtion, the "Remove from active Collection" menu, does not recognize an active scene collection. **Exact steps for others to reproduce the error** * **Link to Collection** allows adding objects to master collection ![01.png](https://archive.blender.org/developer/F6811621/01.png) * **Remove from Collection** does not support removing objects from master collection ![02.png](https://archive.blender.org/developer/F6811626/02.png) (object is in master collection and in 'Collection') * Neither does**Remove Selected from Active Collection** ![03.png](https://archive.blender.org/developer/F6811632/03.png) (object is in master collection and in 'Collection' and master collection is active in outliner) * See https://www.youtube.com/watch?v=QOxewJys2sU For consistencys sake, I'd suggest to add a "Scene Collection" entry to the "Remove from Collection" menu, just like there is one in the "Link to Collection" menu
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Dalai Felinto was assigned by Sebastian Parborg 2019-03-07 16:38:39 +01:00

Please describe the steps to reproduce the bug. A video externally hosted is not considered valid for a bug report.

Some time from now we should be able to check on the commit that fix this, see the original bug it tried to address, and reproduce the bug.
If the video vanishes from youtube this is not possible.

Please describe the steps to reproduce the bug. A video externally hosted is not considered valid for a bug report. Some time from now we should be able to check on the commit that fix this, see the original bug it tried to address, and reproduce the bug. If the video vanishes from youtube this is not possible.
Author

Updated.

Updated.

Added subscriber: @brecht

Added subscriber: @brecht

@brecht I have mixed feelings here. On one hand I can see why we would want to treat the Master Collection as any other collection when it comes to adding/removing from it.
On the other hand we don't allow the Master Collection to be instanced. So we are deliberately treating it as its own thing.

Implementation-wise I would go about having an iterator that includes both master collection and bmain->collections. But I think we should agree on the design first.

@brecht I have mixed feelings here. On one hand I can see why we would want to treat the Master Collection as any other collection when it comes to adding/removing from it. On the other hand we don't allow the Master Collection to be instanced. So we are deliberately treating it as its own thing. Implementation-wise I would go about having an iterator that includes both master collection and bmain->collections. But I think we should agree on the design first.

This issue was referenced by 713010bd77

This issue was referenced by 713010bd7795c539c1c18afc3df9f25ab8ba6c12

For me it's fine to add Scene Collection in this menu.

I think these collection operators should eventually be improved to show collections part of the scene hierarchy and other loose collections a bit separate. But the master collection is part of the scene hierarchy and should be in this menu I think.

For me it's fine to add Scene Collection in this menu. I think these collection operators should eventually be improved to show collections part of the scene hierarchy and other loose collections a bit separate. But the master collection is part of the scene hierarchy and should be in this menu I think.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62313
No description provided.