source/blender/blenkernel/BKE_object.h
@@ -336,8 +336,8 @@ typedef enum eObjectSet {
 
 struct LinkNode *BKE_object_relational_superset(
         struct ViewLayer *view_layer, eObjectSet objectSet, eObRelationTypes includeFilter);
-struct LinkNode *BKE_object_groups(struct Main *bmain, struct Object *ob);
-void             BKE_object_groups_clear(struct Main *bmain, struct Object *object);
+struct LinkNode *BKE_object_groups(struct Main *bmain, struct Scene *scene, struct Object *ob);
+void             BKE_object_groups_clear(struct Main *bmain, struct Scene *scene, struct Object *object);
 
 struct KDTree *BKE_object_as_kdtree(struct Object *ob, int *r_tot);
 
