source/blender/editors/object/object_relations.c
@@ -1394,7 +1394,7 @@ static int make_links_data_exec(bContext *C, wmOperator *op)
 
 	/* avoid searching all collections in source object each time */
 	if (type == MAKE_LINKS_GROUP) {
-		ob_collections = BKE_object_groups(bmain, ob_src);
+		ob_collections = BKE_object_groups(bmain, scene, ob_src);
 	}
 
 	CTX_DATA_BEGIN (C, Base *, base_dst, selected_editable_bases)
@@ -1443,7 +1443,7 @@ static int make_links_data_exec(bContext *C, wmOperator *op)
 						LinkNode *collection_node;
 
 						/* first clear collections */
-						BKE_object_groups_clear(bmain, ob_dst);
+						BKE_object_groups_clear(bmain, scene, ob_dst);
 
 						/* now add in the collections from the link nodes */
 						for (collection_node = ob_collections; collection_node; collection_node = collection_node->next) {
